src/test/dev-workspace/src-readable/java/net/labymod/core/laby3d/opengl/error/generated/WGLNVGPUAffinity_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/WGLNVGPUAffinity_StringErrorContext.class */
public final class WGLNVGPUAffinity_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("nwglEnumGpusNV(IJ)I", "net/labymod/core/laby3d/opengl/error/generated/WGLNVGPUAffinityErrorContext");
        methods.put("wglEnumGpusNV(ILorg/lwjgl/PointerBuffer;)Z", "net/labymod/core/laby3d/opengl/error/generated/WGLNVGPUAffinityErrorContext");
        methods.put("nwglEnumGpuDevicesNV(JIJ)I", "net/labymod/core/laby3d/opengl/error/generated/WGLNVGPUAffinityErrorContext");
        methods.put("wglEnumGpuDevicesNV(JILorg/lwjgl/opengl/GPU_DEVICE;)Z", "net/labymod/core/laby3d/opengl/error/generated/WGLNVGPUAffinityErrorContext");
        methods.put("nwglCreateAffinityDCNV(J)J", "net/labymod/core/laby3d/opengl/error/generated/WGLNVGPUAffinityErrorContext");
        methods.put("wglCreateAffinityDCNV(Lorg/lwjgl/PointerBuffer;)J", "net/labymod/core/laby3d/opengl/error/generated/WGLNVGPUAffinityErrorContext");
        methods.put("nwglEnumGpusFromAffinityDCNV(JIJ)I", "net/labymod/core/laby3d/opengl/error/generated/WGLNVGPUAffinityErrorContext");
        methods.put("wglEnumGpusFromAffinityDCNV(JILorg/lwjgl/PointerBuffer;)Z", "net/labymod/core/laby3d/opengl/error/generated/WGLNVGPUAffinityErrorContext");
        methods.put("wglDeleteDCNV(J)Z", "net/labymod/core/laby3d/opengl/error/generated/WGLNVGPUAffinityErrorContext");
        return methods;
    }
}
